<resources>
    <string name="app_name">DemoApp</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_scan">Scan</string>
    <string name="title_collection">Collection</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all"><u>See all</u></string>
</resources>