<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/outline_favorite_border_24"
        android:enabled="true"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/outline_qr_code_scanner_24"
        android:enabled="true"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/outline_work_outline_24"
        android:enabled="true"
        android:title="@string/title_collection" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/outline_person_outline_24"
        android:enabled="true"
        android:title="@string/title_profile" />

</menu>